# clara-bayley-superdroplets

./: .gitignore  Makefile  README.md  SD_testing.cpp  a.out  collisions.hpp  common_pyfuncs.py  constants.hpp  convert_cpp2python.py  create_superdrop_init.py  cvodehelpers.hpp  differentials.hpp  dimlessSDinit.csv  dimlessinit_superdroplets.csv  draftjacobian.hpp  droplets_class.py  environment.yml  init.hpp  odefunctions.hpp  odesolver  odesolver.cpp  plotSDs.ipynb  plot_csv.ipynb  plot_csv.py  profile_code.ipynb  setup.py  simplemodel_v4.ipynb  sundials2_SDsol.csv  sundials2_err.csv  sundials2_sol.csv  sundials2_stats.csv  superdropletclasses.hpp  superdroplets.hpp  superdroplets_errorcopy.hpp  superdroplets_init.cpp  superdroptest.cpp  testing.cpp  write_SDinit_csvfile.py
.github/workflows/: CI.yml
dep/: odesolver.d
docs/source/: conf.py  functions.rst  index.rst
model_v5_manysuperdropobjs/: montecarlo_coalescence_scrappaper.ipynb  ode_solver.py  simplemodel_v5.ipynb  superdroplets_as_objects.py
model_v6_dimless/: constants.py  ode_solver.py  simplemodel_v6.ipynb  superdroplets_as_objects.py
modelv4_1giantsuperdropsobj/: constants.py  ode_solver.py  simplemodel_v4.ipynb
rk4_for_condensation_odes/: CMakeLists.txt  condensation_growth_ode.ipynb  mainRK4.cpp  plot_csv.ipynb  runge_kutta_condensation.hpp
simplemodel_development/: no_droplets1-backup12Apr.ipynb  no_droplets1.ipynb  only_droplets.ipynb  with_droplets2.ipynb  with_droplets2_26thApr.ipynb  with_droplets3.ipynb  with_droplets3_withactivation-backup4thMay.ipynb  with_droplets3_withactivation.ipynb  with_droplets3_withmultimodal_activation.ipynb  with_droplets3_withsedimetation.ipynb  with_droplets_attempt1.ipynb
simplemodel_development/.ipynb_checkpoints/: no_droplets1-backup12Apr-checkpoint.ipynb  no_droplets1-checkpoint.py  only_droplets-checkpoint.ipynb  with_droplets2-checkpoint.ipynb  with_droplets2_26thApr-checkpoint.ipynb  with_droplets3-checkpoint.ipynb  with_droplets3_withactivation-backup4thMay-checkpoint.ipynb  with_droplets3_withactivation-checkpoint.ipynb  with_droplets3_withmultimodal_activation-checkpoint.ipynb  with_droplets3_withsedimetation-checkpoint.ipynb  with_droplets_attempt1-checkpoint.ipynb
version1.0/: differentials.hpp  init.hpp  odesolver.cpp  plotSDs.ipynb  superdroplets.hpp  testing.cpp
version1.0_OG/: Makefile  cvodehelpers.hpp  differentials.hpp  odesolver  odesolver.cpp  plotSDs.ipynb  plot_csv.ipynb  sol.csv  solSD.csv  superdroplets.hpp  write_SDinit_csvfile.py
version1.0_OG/dep/: odesolver.d
version1_OG/: collisions.hpp  init.hpp
version2/: claras_SDconstants.hpp  claras_SDinit.hpp  createSDinit_script.py  createSDinit_src.py  createSDinitcsv.py
version2.0/: CMakeLists.txt  a.out  claras_SDconstants.hpp  claras_SDinit.hpp  collisions4SDM.cpp  collisions4SDM.hpp  common2allsuperdrops.cpp  common2allsuperdrops.hpp  condensationgrowth4SDM.cpp  condensationgrowth4SDM.hpp  createSDinitcsv.py  cvode_helpers.cpp  cvode_helpers.hpp  dimlessSDinit.csv  mainSDM.cpp  plotSDs.ipynb  plot_csv.ipynb  readwritefuncs4SDM.cpp  readwritefuncs4SDM.hpp  sol.csv  solSD.csv  superdrop.cpp  superdrop.hpp  testing.c
version2.0/cvode_odesolver/: cvode_odesolver.cpp  cvode_odesolver.hpp
version2.0/cvode_odesolver_attempt2/: CMakeLists.txt  Makefile  cvode_differentials.cpp  cvode_differentials.hpp  cvode_odesolver.cpp  cvode_odesolver.hpp  differentials.hpp  mainODE.cpp  testing  testing.cpp
version2.0/cvode_odesolver_attempt2/a.out.dSYM/Contents/Resources/DWARF/: a.out
version2.0/cvode_odesolver_attempt2/dep/: mainODE.d  odesolver.d  testing.d
version2.0/plotting_notebooks/: plotSDs.ipynb  plot_csv.ipynb
version2.0/scrap_paper/: mainODE.cpp  mainSDM.cpp
version2.0/src/: CMakeLists.txt  main.cpp
version2.0/src/kinetics_solver/: cvode_odesolver.cpp  cvode_odesolver.hpp  differential_functions.cpp  differential_functions.hpp
version2.0/src/superdrop_solver/: collisions4SDM.cpp  collisions4SDM.hpp  common2allsuperdrops.cpp  common2allsuperdrops.hpp  condensationgrowth4SDM.cpp  condensationgrowth4SDM.hpp  readwritefuncs4SDM.cpp  readwritefuncs4SDM.hpp  superdrop.cpp  superdrop.hpp
version2.0/tests/: python_test_for_CI_example.py
(+26 files in other folders)
